third_party/move/move-compiler-v2/tests/checking/abilities/globals.exp

Diagnostics:
error: type `R` is missing required ability `key` (type was inferred)
  ┌─ tests/checking/abilities/globals.move:6:20
  │
6 │         move_to(s, R{f: 1});
  │                    ^^^^^^^
  │
  = required by instantiating type parameter `T` of function `move_to`

error: type `R` is missing required ability `key`
   ┌─ tests/checking/abilities/globals.move:10:9
   │
10 │         exists<R>(a)
   │         ^^^^^^^^^^^^
   │
   = required by instantiating type parameter `T` of function `exists`

error: type `R` is missing required ability `key`
   ┌─ tests/checking/abilities/globals.move:14:17
   │
14 │         let r = borrow_global<R>(a);
   │                 ^^^^^^^^^^^^^^^^^^^
   │
   = required by instantiating type parameter `T` of function `borrow_global`

error: type `R` is missing required ability `key`
   ┌─ tests/checking/abilities/globals.move:19:17
   │
19 │         let r = borrow_global_mut<R>(a);
   │                 ^^^^^^^^^^^^^^^^^^^^^^^
   │
   = required by instantiating type parameter `T` of function `borrow_global_mut`
